<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_icons"
            android:icon="@drawable/ic_icons"
            android:title="@string/menu_icons" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_request"
            android:title="@string/menu_request" />
        <item
            android:id="@+id/nav_wallpapers"
            android:icon="@drawable/ic_wallpaper"
            android:title="@string/menu_wallpapers" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about" />
    </group>
</menu>
